--- a/app/src/main/res/layout/activity_notification.xml
+++ b/app/src/main/res/layout/activity_notification.xml
@@ -18,8 +18,20 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@id/notificationToolbar"
-        android:text="@string/notification"
+        android:id="@+id/randomTextTitle"
+        android:text="Notification"
+        android:textSize="30sp"
+        android:layout_centerVertical="true"
+        android:layout_centerHorizontal="true"
+        />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="This function will be published in near future. \nPlease stay tuned."
+        android:layout_below="@id/randomTextTitle"
+        android:layout_centerHorizontal="true"
+        android:textAlignment="center"
         />
 
     <View
