--- a/app/src/main/res/layout/activity_property_tenure_contracts_detail.xml
+++ b/app/src/main/res/layout/activity_property_tenure_contracts_detail.xml
@@ -9,7 +9,7 @@
     <androidx.appcompat.widget.Toolbar
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/propertyExpensesDetailToolbar"
+        android:id="@+id/tenureContractsDetailToolbar"
         app:navigationIcon="?attr/homeAsUpIndicator"
         android:elevation="@dimen/toolbar_elevation"
         android:background="@color/white"
@@ -21,8 +21,9 @@
         android:layout_marginStart="@dimen/min_group_margin"
         android:layout_marginEnd="@dimen/min_group_margin"
         android:layout_marginTop="@dimen/min_group_margin"
-        android:layout_below="@id/propertyExpensesDetailToolbar"
-        android:layout_above="@id/propertyExpensesDetailEditButton">
+        android:layout_below="@id/tenureContractsDetailToolbar"
+        android:layout_above="@id/tenureContractsDetailEditButton"
+        >
 
         <RelativeLayout
             android:layout_width="match_parent"
@@ -32,8 +33,8 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:id="@+id/propertyExpensesDetailDescriptionLabel"
-                android:text="@string/property_expenses_payment_description_label"
+                android:id="@+id/tenureContractsDetailPropertyNameLabel"
+                android:text="@string/tenure_contracts_property_name_label"
                 android:textColor="@color/black"
                 android:textSize="@dimen/input_field_font_size"
                 />
@@ -41,9 +42,9 @@
             <EditText
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/input_field_height"
-                android:id="@+id/propertyExpensesDetailDescription"
+                android:id="@+id/tenureContractsDetailPropertyName"
                 android:autofillHints=""
-                android:hint="@string/property_expenses_payment_description"
+                android:hint="@string/tenure_contracts_property_name"
                 android:inputType="text"
                 android:enabled="false"
                 android:textAlignment="textStart"
@@ -51,7 +52,7 @@
                 android:textColor="@color/black"
                 android:textColorHint="@color/disabled_grey"
                 android:background="@drawable/edittext_background_state"
-                android:layout_below="@id/propertyExpensesDetailDescriptionLabel"
+                android:layout_below="@id/tenureContractsDetailPropertyNameLabel"
                 android:paddingStart="@dimen/input_field_gap_height"
                 tools:ignore="RtlSymmetry"
                 />
@@ -59,20 +60,20 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:id="@+id/propertyExpensesDetailPropertyNameLabel"
-                android:text="@string/property_expenses_property_name_label"
+                android:id="@+id/tenureContractsDetailTenantNameLabel"
+                android:text="@string/tenure_contracts_tenant_name_label"
                 android:textColor="@color/black"
                 android:textSize="@dimen/input_field_font_size"
-                android:layout_below="@id/propertyExpensesDetailDescription"
+                android:layout_below="@id/tenureContractsDetailPropertyName"
                 android:layout_marginTop="@dimen/input_field_gap_height"
                 />
 
             <EditText
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/input_field_height"
-                android:id="@+id/propertyExpensesDetailPropertyName"
+                android:id="@+id/tenureContractsDetailTenantName"
                 android:autofillHints=""
-                android:hint="@string/property_expenses_property_name"
+                android:hint="@string/tenure_contracts_tenant_name"
                 android:enabled="false"
                 android:inputType="text"
                 android:textAlignment="textStart"
@@ -80,7 +81,7 @@
                 android:textColor="@color/black"
                 android:textColorHint="@color/disabled_grey"
                 android:background="@drawable/edittext_background_state"
-                android:layout_below="@id/propertyExpensesDetailPropertyNameLabel"
+                android:layout_below="@id/tenureContractsDetailTenantNameLabel"
                 android:paddingStart="@dimen/input_field_gap_height"
                 tools:ignore="RtlSymmetry"
                 />
@@ -88,49 +89,20 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:id="@+id/propertyExpensesDetailTypeLabel"
-                android:text="@string/property_expenses_expense_type_label"
+                android:id="@+id/tenureContractsDetailNameLabel"
+                android:text="@string/tenure_contracts_name_label"
                 android:textColor="@color/black"
                 android:textSize="@dimen/input_field_font_size"
-                android:layout_below="@id/propertyExpensesDetailPropertyName"
+                android:layout_below="@id/tenureContractsDetailTenantName"
                 android:layout_marginTop="@dimen/input_field_gap_height"
                 />
 
             <EditText
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/input_field_height"
-                android:id="@+id/propertyExpensesDetailType"
+                android:id="@+id/tenureContractsDetailName"
                 android:autofillHints=""
-                android:inputType="text"
-                android:hint="@string/property_expenses_expense_type"
-                android:enabled="false"
-                android:textAlignment="textStart"
-                android:textSize="@dimen/input_field_font_size"
-                android:textColor="@color/black"
-                android:textColorHint="@color/disabled_grey"
-                android:background="@drawable/edittext_background_state"
-                android:layout_below="@id/propertyExpensesDetailTypeLabel"
-                android:paddingStart="@dimen/input_field_gap_height"
-                tools:ignore="RtlSymmetry"
-                />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:id="@+id/propertyExpensesDetailVendorLabel"
-                android:text="@string/property_expenses_vendor_name_label"
-                android:textColor="@color/black"
-                android:textSize="@dimen/input_field_font_size"
-                android:layout_below="@id/propertyExpensesDetailType"
-                android:layout_marginTop="@dimen/input_field_gap_height"
-                />
-
-            <EditText
-                android:layout_width="match_parent"
-                android:layout_height="@dimen/input_field_height"
-                android:id="@+id/propertyExpensesDetailVendor"
-                android:autofillHints=""
-                android:hint="@string/property_expenses_vendor_name"
+                android:hint="@string/tenure_contracts_name"
                 android:inputType="text"
                 android:enabled="false"
                 android:textAlignment="textStart"
@@ -138,7 +110,7 @@
                 android:textColor="@color/black"
                 android:textColorHint="@color/disabled_grey"
                 android:background="@drawable/edittext_background_state"
-                android:layout_below="@id/propertyExpensesDetailVendorLabel"
+                android:layout_below="@id/tenureContractsDetailNameLabel"
                 android:paddingStart="@dimen/input_field_gap_height"
                 tools:ignore="RtlSymmetry"
                 />
@@ -146,28 +118,28 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:id="@+id/propertyExpensesDetailAmountLabel"
-                android:text="@string/property_expenses_amount_label"
+                android:id="@+id/tenureContractsDetailDescriptionLabel"
+                android:text="@string/tenure_contracts_description_label"
                 android:textColor="@color/black"
                 android:textSize="@dimen/input_field_font_size"
-                android:layout_below="@id/propertyExpensesDetailVendor"
+                android:layout_below="@id/tenureContractsDetailName"
                 android:layout_marginTop="@dimen/input_field_gap_height"
                 />
 
             <EditText
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/input_field_height"
-                android:id="@+id/propertyExpensesDetailAmount"
+                android:id="@+id/tenureContractsDetailDescription"
                 android:autofillHints=""
-                android:hint="@string/property_expenses_amount"
-                android:inputType="number"
+                android:hint="@string/tenure_contracts_description"
                 android:enabled="false"
+                android:inputType="text"
                 android:textAlignment="textStart"
                 android:textSize="@dimen/input_field_font_size"
                 android:textColor="@color/black"
                 android:textColorHint="@color/disabled_grey"
                 android:background="@drawable/edittext_background_state"
-                android:layout_below="@id/propertyExpensesDetailAmountLabel"
+                android:layout_below="@id/tenureContractsDetailDescriptionLabel"
                 android:paddingStart="@dimen/input_field_gap_height"
                 tools:ignore="RtlSymmetry"
                 />
@@ -175,43 +147,98 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:id="@+id/propertyExpensesDetailDateOfExpenseLabel"
-                android:text="@string/property_expenses_date_of_expense_label"
+                android:id="@+id/tenureContractsDetailMonthlyRentalAmountLabel"
+                android:text="@string/tenure_contracts_monthly_rental_amount_label"
                 android:textColor="@color/black"
                 android:textSize="@dimen/input_field_font_size"
-                android:layout_below="@id/propertyExpensesDetailAmount"
+                android:layout_below="@id/tenureContractsDetailDescription"
                 android:layout_marginTop="@dimen/input_field_gap_height"
                 />
 
             <EditText
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/input_field_height"
-                android:id="@+id/propertyExpensesDetailDateOfExpense"
-                android:inputType="date"
-                android:enabled="false"
+                android:id="@+id/tenureContractsDetailMonthlyRentalAmount"
                 android:autofillHints=""
+                android:hint="@string/tenure_contracts_monthly_rental_amount"
+                android:enabled="false"
+                android:inputType="numberDecimal|numberSigned"
                 android:textAlignment="textStart"
                 android:textSize="@dimen/input_field_font_size"
                 android:textColor="@color/black"
                 android:textColorHint="@color/disabled_grey"
                 android:background="@drawable/edittext_background_state"
-                android:layout_below="@id/propertyExpensesDetailDateOfExpenseLabel"
+                android:layout_below="@id/tenureContractsDetailMonthlyRentalAmountLabel"
                 android:paddingStart="@dimen/input_field_gap_height"
                 tools:ignore="RtlSymmetry"
-                android:clickable="false"
-                android:cursorVisible="false"
-                android:focusable="false"
-                android:focusableInTouchMode="false"
                 />
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:id="@+id/propertyExpensesDetailUploadedFileLabel"
-                android:text="@string/property_expenses_uploaded_files_label"
+                android:id="@+id/tenureContractsDetailTenureStartDateLabel"
+                android:text="@string/tenure_contracts_tenure_start_date_label"
                 android:textColor="@color/black"
                 android:textSize="@dimen/input_field_font_size"
-                android:layout_below="@id/propertyExpensesDetailDateOfExpense"
+                android:layout_below="@id/tenureContractsDetailMonthlyRentalAmount"
+                android:layout_marginTop="@dimen/input_field_gap_height"
+                />
+
+            <EditText
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/input_field_height"
+                android:id="@+id/tenureContractsDetailTenureStartDate"
+                android:autofillHints=""
+                android:hint="@string/tenure_contracts_tenure_start_date"
+                android:enabled="false"
+                android:inputType="text"
+                android:textAlignment="textStart"
+                android:textSize="@dimen/input_field_font_size"
+                android:textColor="@color/black"
+                android:textColorHint="@color/disabled_grey"
+                android:background="@drawable/edittext_background_state"
+                android:layout_below="@id/tenureContractsDetailTenureStartDateLabel"
+                android:paddingStart="@dimen/input_field_gap_height"
+                tools:ignore="RtlSymmetry,TextFields"
+                />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/tenureContractsDetailTenureEndDateLabel"
+                android:text="@string/tenure_contracts_tenure_end_date_label"
+                android:textColor="@color/black"
+                android:textSize="@dimen/input_field_font_size"
+                android:layout_below="@id/tenureContractsDetailTenureStartDate"
+                android:layout_marginTop="@dimen/input_field_gap_height"
+                />
+
+            <EditText
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/input_field_height"
+                android:id="@+id/tenureContractsDetailTenureEndDate"
+                android:autofillHints=""
+                android:hint="@string/tenure_contracts_tenure_end_date"
+                android:enabled="false"
+                android:inputType="text"
+                android:textAlignment="textStart"
+                android:textSize="@dimen/input_field_font_size"
+                android:textColor="@color/black"
+                android:textColorHint="@color/disabled_grey"
+                android:background="@drawable/edittext_background_state"
+                android:layout_below="@id/tenureContractsDetailTenureEndDateLabel"
+                android:paddingStart="@dimen/input_field_gap_height"
+                tools:ignore="RtlSymmetry,TextFields"
+                />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/tenureContractsDetailUploadedFileLabel"
+                android:text="@string/tenure_contracts_uploaded_files_label"
+                android:textColor="@color/black"
+                android:textSize="@dimen/input_field_font_size"
+                android:layout_below="@id/tenureContractsDetailTenureEndDate"
                 android:layout_marginTop="@dimen/input_field_gap_height"
                 />
 
@@ -219,15 +246,15 @@
                 android:layout_width="@dimen/user_profile_image_width"
                 android:layout_height="@dimen/user_profile_image_height"
                 android:src="@drawable/file_ic"
-                android:id="@+id/propertyExpensesDetailUploadedFile"
-                app:shapeAppearanceOverlay="@style/property_expenses_uploaded_file_image"
+                android:id="@+id/tenureContractsDetailUploadedFile"
+                app:shapeAppearanceOverlay="@style/uploaded_file_image"
                 app:srcCompat="@drawable/file_ic"
                 app:strokeColor="@color/disabled_grey"
                 app:strokeWidth="1dp"
                 android:contentDescription="@string/app_name"
                 android:scaleType="fitCenter"
                 android:padding="@dimen/user_profile_image_padding"
-                android:layout_below="@id/propertyExpensesDetailUploadedFileLabel"
+                android:layout_below="@id/tenureContractsDetailUploadedFileLabel"
                 />
 
         </RelativeLayout>
@@ -255,29 +282,29 @@
         <com.nambimobile.widgets.efab.FabOption
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/propertyExpensesDetailRemoveExpenseButton"
+            android:id="@+id/tenureContractsDetailRemoveContractButton"
             app:fab_color="@color/alert_red"
             app:fab_icon="@drawable/remove_ic_white"
-            app:label_text="Remove Asset Expenses"
+            app:label_text="Remove Tenure Contracts"
             app:label_backgroundColor="@color/alert_red"
             />
 
-        <!--        <com.nambimobile.widgets.efab.FabOption-->
-        <!--            android:layout_width="wrap_content"-->
-        <!--            android:layout_height="wrap_content"-->
-        <!--            android:id="@+id/propertyExpensesDetailEditButton"-->
-        <!--            app:fab_color="@color/primary_blue"-->
-        <!--            app:fab_icon="@drawable/ic_edit_white"-->
-        <!--            app:label_text="Edit"-->
-        <!--            app:label_backgroundColor="@color/primary_blue"-->
-        <!--            />-->
+<!--        <com.nambimobile.widgets.efab.FabOption-->
+<!--            android:layout_width="wrap_content"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:id="@+id/tenureContractsDetailPaymentRecordButton"-->
+<!--            app:fab_color="@color/primary_blue"-->
+<!--            app:fab_icon="@drawable/ic_payment_white"-->
+<!--            app:label_text="Edit"-->
+<!--            app:label_backgroundColor="@color/primary_blue"-->
+<!--            />-->
 
     </com.nambimobile.widgets.efab.ExpandableFabLayout>
 
     <android.widget.Button
         android:layout_width="@dimen/large_button_width"
         android:layout_height="wrap_content"
-        android:id="@+id/propertyExpensesDetailEditButton"
+        android:id="@+id/tenureContractsDetailEditButton"
         android:text="@string/edit"
         android:textColor="@color/white"
         android:textSize="@dimen/large_button_font_size"
@@ -293,7 +320,7 @@
     <View
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/propertyExpensesDetailBackground"
+        android:id="@+id/tenureContractsDetailBackground"
         android:background="@color/background_black"
         android:visibility="gone"
         />
@@ -301,7 +328,7 @@
     <ProgressBar
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/propertyExpensesDetailLoadingSpinner"
+        android:id="@+id/tenureContractsDetailLoadingSpinner"
         android:layout_centerVertical="true"
         android:layout_centerHorizontal="true"
         android:indeterminate="true"
