--- a/app/src/main/res/drawable/property_tenant_user_icon.xml
+++ b/app/src/main/res/drawable/property_tenant_user_icon.xml
@@ -1,9 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:id="@+id/background"
-        android:drawable="@drawable/user_ic" />
-    <item android:id="@+id/secondaryProgress"
-        android:drawable="@drawable/user_ic" />
-    <item android:id="@+id/progress"
-        android:drawable="@drawable/ic_user_blue" />
+
+    <item android:id="@android:id/background"
+        android:drawable="@drawable/property_tenant_user_icon_empty"/>
+
+    <item android:id="@android:id/secondaryProgress"
+        android:drawable="@drawable/property_tenant_user_icon_fill"
+        />
+    <item android:id="@android:id/progress"
+        android:drawable="@drawable/property_tenant_user_icon_fill"
+        />
+
 </layer-list>
