--- a/app/src/main/res/layout/listview_landlord_property_item.xml
+++ b/app/src/main/res/layout/listview_landlord_property_item.xml
@@ -49,9 +49,10 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:id="@+id/landlordManagePropertyListItemTenantCount"
-                        style="?android:attr/ratingBarStyleSmall"
-                        android:numStars="10"
+                        style="@style/property_tenant_user_icon"
                         android:layout_alignParentEnd="true"
+                        android:isIndicator="true"
+                        android:numStars="5"
                         />
 
 <!--                    <TextView-->
