--- a/app/src/main/res/layout/activity_property_tenure_contracts_edit.xml
+++ b/app/src/main/res/layout/activity_property_tenure_contracts_edit.xml
@@ -361,6 +361,7 @@
                 android:text="@string/empty"
                 android:textColor="@color/disabled_grey"
                 android:textSize="@dimen/input_field_font_size"
+                android:visibility="gone"
                 android:layout_below="@id/tenureContractsEditUploadedFile"
                 />
 
