--- a/app/src/main/res/layout/activity_payment_records_list.xml
+++ b/app/src/main/res/layout/activity_payment_records_list.xml
@@ -5,12 +5,12 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".propertyExpenses.PropertyExpensesListActivity">
+    tools:context=".paymentRecords.PaymentRecordsListActivity">
 
     <androidx.appcompat.widget.Toolbar
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/propertyExpensesListToolbar"
+        android:id="@+id/paymentRecordsListToolbar"
         app:navigationIcon="?attr/homeAsUpIndicator"
         android:elevation="@dimen/toolbar_elevation"
         android:background="@color/white"
@@ -19,8 +19,8 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_above="@id/propertyExpensesListAddExpensesButton"
-        android:layout_below="@id/propertyExpensesListToolbar"
+        android:layout_above="@id/paymentRecordsListAddRecordsButton"
+        android:layout_below="@id/paymentRecordsListToolbar"
         >
 
         <!--        android:layout_marginStart="@dimen/min_group_margin"-->
@@ -29,7 +29,7 @@
         <ListView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/propertyExpensesList"
+            android:id="@+id/paymentRecordsList"
             />
 
         <!--        android:divider="@color/white"-->
@@ -40,8 +40,8 @@
     <android.widget.Button
         android:layout_width="@dimen/large_button_width"
         android:layout_height="wrap_content"
-        android:id="@+id/propertyExpensesListAddExpensesButton"
-        android:text="@string/add_property_expenses"
+        android:id="@+id/paymentRecordsListAddRecordsButton"
+        android:text="@string/add_payment_records"
         android:textColor="@color/white"
         android:textSize="@dimen/large_button_font_size"
         android:background="@drawable/primary_button_background_state"
@@ -56,7 +56,7 @@
     <View
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/propertyExpensesListBackground"
+        android:id="@+id/paymentRecordsListBackground"
         android:background="@color/background_black"
         android:visibility="gone"
         />
@@ -64,7 +64,7 @@
     <ProgressBar
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/propertyExpensesListLoadingSpinner"
+        android:id="@+id/paymentRecordsListLoadingSpinner"
         android:layout_centerVertical="true"
         android:layout_centerHorizontal="true"
         android:indeterminate="true"
