--- a/app/src/main/res/layout/activity_forgot_password.xml
+++ b/app/src/main/res/layout/activity_forgot_password.xml
@@ -19,10 +19,23 @@
             <ImageView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:src="@drawable/main_propster_logo"
+                android:src="@drawable/main_propster_icon"
                 android:contentDescription="@string/app_name"
                 android:layout_centerHorizontal="true"
                 android:layout_centerVertical="true"
+                />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/app_name"
+                android:textColor="@color/primary_blue"
+                android:textSize="@dimen/large_text_font_size"
+                android:textStyle="bold"
+                android:textAllCaps="true"
+                android:layout_marginBottom="@dimen/group_gap_height"
+                android:layout_centerHorizontal="true"
+                android:layout_alignParentBottom="true"
                 />
 
         </RelativeLayout>
