--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -19,11 +19,25 @@
             <ImageView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:src="@drawable/main_propster_logo"
+                android:src="@drawable/main_propster_icon"
                 android:contentDescription="@string/app_name"
                 android:layout_centerHorizontal="true"
                 android:layout_centerVertical="true"
                 />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/app_name"
+                android:textColor="@color/primary_blue"
+                android:textSize="@dimen/large_text_font_size"
+                android:textStyle="bold"
+                android:textAllCaps="true"
+                android:layout_marginBottom="@dimen/group_gap_height"
+                android:layout_centerHorizontal="true"
+                android:layout_alignParentBottom="true"
+                />
+
 
         </RelativeLayout>
 
@@ -86,18 +100,18 @@
                 android:visibility="invisible"
                 />
 
-            <android.widget.Button
-                android:layout_width="@dimen/primary_button_width"
-                android:layout_height="wrap_content"
-                android:id="@+id/loginRegisterButton"
-                android:text="@string/register"
-                android:textColor="@color/white"
-                android:textSize="@dimen/primary_button_font_size"
-                android:background="@drawable/primary_button_background_state"
-                android:layout_centerHorizontal="true"
-                android:layout_marginTop="@dimen/group_gap_height"
-                android:layout_below="@id/loginPassword"
-                />
+<!--            <android.widget.Button-->
+<!--                android:layout_width="@dimen/primary_button_width"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:id="@+id/loginRegisterButton"-->
+<!--                android:text="@string/register"-->
+<!--                android:textColor="@color/white"-->
+<!--                android:textSize="@dimen/primary_button_font_size"-->
+<!--                android:background="@drawable/primary_button_background_state"-->
+<!--                android:layout_centerHorizontal="true"-->
+<!--                android:layout_marginTop="@dimen/group_gap_height"-->
+<!--                android:layout_below="@id/loginPassword"-->
+<!--                />-->
 
             <android.widget.Button
                 android:layout_width="@dimen/primary_button_width"
@@ -109,7 +123,17 @@
                 android:background="@drawable/primary_button_background_state"
                 android:layout_centerHorizontal="true"
                 android:layout_marginTop="@dimen/primary_button_gap_height"
-                android:layout_below="@id/loginRegisterButton"
+                android:layout_below="@id/loginPassword"
+                />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/create_account"
+                android:id="@+id/loginRegister"
+                android:layout_centerHorizontal="true"
+                android:layout_marginTop="@dimen/primary_button_gap_height"
+                android:layout_below="@id/loginButton"
                 />
 
             <TextView
@@ -119,7 +143,7 @@
                 android:id="@+id/loginForgotPassword"
                 android:layout_centerHorizontal="true"
                 android:layout_marginTop="@dimen/primary_button_gap_height"
-                android:layout_below="@id/loginButton"
+                android:layout_below="@id/loginRegister"
                 />
 
         </RelativeLayout>
