--- a/app/src/main/res/layout/fragment_content_more.xml
+++ b/app/src/main/res/layout/fragment_content_more.xml
@@ -7,7 +7,7 @@
         android:layout_width="@dimen/primary_button_width"
         android:layout_height="wrap_content"
         android:id="@+id/contentMoreUserProfileButton"
-        android:text="@string/user"
+        android:text="@string/user_profile"
         android:textColor="@color/white"
         android:textSize="@dimen/primary_button_font_size"
         android:background="@drawable/primary_button_background_state"
